# clusterkit

./: .gitignore  .rspec_status  .simplecov  CHANGELOG.md  CLAUDE.md  Cargo.toml  Gemfile  IMPLEMENTATION_NOTES.md  PYTHON_COMPARISON.md  README.md  Rakefile  annembed-ruby.gemspec  annembed.gemspec  clusterkit.gemspec
.github/workflows/: ci.yml
docs/: KNOWN_ISSUES.md  RUST_ERROR_HANDLING.md  TEST_FIXTURES.md  UMAP_EXPLAINED.md  UMAP_TROUBLESHOOTING.md  VERBOSE_OUTPUT.md
examples/: basic_usage.rb  hdbscan_example.rb  optimal_kmeans_example.rb  pca_example.rb  reproducible_umap.rb  verbose_control.rb
ext/annembed_ruby/: Cargo.toml  extconf.rb
ext/annembed_ruby/src/: clustering.rs  embedder.rs  embedder_persistent.rs  lib.rs  svd.rs  tests.rs  utils.rs
ext/annembed_ruby/src/clustering/: hdbscan_wrapper.rs
ext/clusterkit/: Cargo.toml  extconf.rb
lib/: annembed.rb  clusterkit.rb
lib/annembed/: annembed_ruby.rb  clustering.rb  config.rb  configuration.rb  embedder.rb  hdbscan_api_design.rb  pca.rb  preprocessing.rb  silence.rb  svd.rb  umap.rb  utils.rb  version.rb
lib/clusterkit/: clustering.rb  clusterkit.rb  config.rb  configuration.rb  data_validator.rb  dimensionality.rb  embedder.rb  hdbscan_api_design.rb  hnsw.rb  pca.rb  preprocessing.rb  silence.rb  svd.rb  umap.rb  utils.rb  version.rb
lib/tasks/: visualize.rake
spec/: annembed_spec.rb  clusterkit_spec.rb  spec_helper.rb
spec/annembed/: additional_clustering_spec.rb  annembed_ruby_spec.rb  clustering_spec.rb  config_spec.rb  configuration_spec.rb  elbow_method_spec.rb  embedder_spec.rb  (+9 more)
(+40 files in other folders)
