[package]
name = "annembed_ruby"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
magnus = { version = "0.6", features = ["embed"] }
annembed = { git = "https://github.com/jean-pierreBoth/annembed" }
hnsw_rs = "0.3"
ndarray = "0.16"
num-traits = "0.2"
rayon = "1.7"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
rand = "0.8"

[features]
default = ["openblas-static"]
openblas-static = ["annembed/openblas-static"]
openblas-system = ["annembed/openblas-system"]
intel-mkl-static = ["annembed/intel-mkl-static"]